# diet-calc

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.rst  makefile  package-lock.json  pyproject.toml
backend/: calculations.py  commandline.py  main.py  test_backend.py
diet_calc/: backend_stuff.py  commandline.py  main.py  test_backend.py
frontend/src/: App.js  index.css
