[tool.poetry]
name = "diet-calc"
version = "0.1.0"
description = "nutr req calculator for infants"
authors = ["dessertivore"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
annotated = "^0.0.2"
path = "^16.7.1"
ruff = "^0.0.292"


[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-xdist = "^3.3.1"
mypy = "^1.6.0"
ruff = "^0.0.292"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
